# snake-shed

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
config/: .env.dist  config.yaml
src/: __version__.py  config.py  config_loader.py
